--- a/conversion.html
+++ b/conversion.html
@@ -19,18 +19,18 @@
 
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/conversion/conversion-calculators">
+<link rel="canonical" href="https://calclulo.com//conversion">
 
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/conversion/conversion-calculators">
+<meta property="og:url" content="https://calclulo.com//conversion">
 <meta property="og:title" content="Free Conversion Calculators for Everyday Use">
 <meta property="og:description" content="Quickly convert between units of length, weight, volume, temperature, and more. Use these accurate, free conversion calculators for daily tasks and professional needs.">
 <meta property="og:image" content="https://calclulo.com/assets/images/conversion calculators-thumbnail.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/conversion/conversion-calculators">
+<meta name="twitter:url" content="https://calclulo.com//conversion">
 <meta name="twitter:title" content="Free Conversion Calculators for Everyday Use">
 <meta name="twitter:description" content="Reliable and easy-to-use unit converters — from meters to feet, Celsius to Fahrenheit, MB to GB, and beyond. Trusted by students, professionals, and curious minds.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/conversion calculators-thumbnail.png">
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Conversion Calculators",
-    "url": "https://calclulo.com/conversion/conversion-calculators",
+    "url": "https://calclulo.com//conversion",
     "description": "Explore our collection of free conversion calculators for units like length, mass, volume, temperature, and data. Perfect for everyday use and professional work.",
     "inLanguage": "en",
     "publisher": {
