--- a/math.html
+++ b/math.html
@@ -19,21 +19,21 @@
 
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/math/math-calculators">
+<link rel="canonical" href="https://calclulo.com/math">
 
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/math">
 <meta property="og:title" content="Free Math Calculators for Students and Everyday Use">
 <meta property="og:description" content="Solve math problems fast with free tools for percentages, equations, fractions, and more. Great for students, teachers, and daily use.">
-<meta property="og:image" content="https://calclulo.com/assets/images/math calculators-thumbnail.png">
+<meta property="og:image" content="https://calclulo.com/assets/images/math-calculators-thumbnail.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://calclulo.com/math">
 <meta name="twitter:title" content="Free Math Calculators for Students and Everyday Use">
 <meta name="twitter:description" content="Simple and accurate math calculators for solving equations, percentages, and more. Built for school and everyday needs.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/math calculators-thumbnail.png">
+<meta name="twitter:image" content="https://calclulo.com/assets/images/math-calculators-thumbnail.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Math Calculators",
-    "url": "https://calclulo.com/math/math-calculators",
+    "url": "https://calclulo.com/math",
     "description": "Explore our free math calculators to solve equations, percentages, fractions, and other problems with ease. Perfect for students, teachers, and daily tasks.",
     "inLanguage": "en",
     "publisher": {
