--- a/physics.html
+++ b/physics.html
@@ -19,21 +19,21 @@
 
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/Physics/Physics-calculators">
+<link rel="canonical" href="https://calclulo.com/physics">
 
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/Physics/Physics-calculators">
+<meta property="og:url" content="https://calclulo.com/physics">
 <meta property="og:title" content="Free Physics Calculators for Everyday Use">
 <meta property="og:description" content="Quickly convert between units of length, weight, volume, temperature, and more. Use these accurate, free Physics calculators for daily tasks and professional needs.">
-<meta property="og:image" content="https://calclulo.com/assets/images/Physics calculators-thumbnail.png">
+<meta property="og:image" content="https://calclulo.com/assets/images/physics calculators-thumbnail.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/Physics/Physics-calculators">
+<meta name="twitter:url" content="https://calclulo.com/physics">
 <meta name="twitter:title" content="Free Physics Calculators for Everyday Use">
 <meta name="twitter:description" content="Reliable and easy-to-use unit converters — from meters to feet, Celsius to Fahrenheit, MB to GB, and beyond. Trusted by students, professionals, and curious minds.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/Physics calculators-thumbnail.png">
+<meta name="twitter:image" content="https://calclulo.com/assets/images/physics calculators-thumbnail.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Physics Calculators",
-    "url": "https://calclulo.com/Physics/Physics-calculators",
+    "url": "https://calclulo.com/physics",
     "description": "Explore our collection of free Physics calculators for units like length, mass, volume, temperature, and data. Perfect for everyday use and professional work.",
     "inLanguage": "en",
     "publisher": {
@@ -108,7 +108,7 @@ Chemistry
        <svg id="right-chev-svg"  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
         </a>
         
-       <a class="Physics" href="/Physics" >
+       <a class="Physics" href="/physics" >
      <svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M280-160 80-360l200-200 56 57-103 103h287v80H233l103 103-56 57Zm400-240-56-57 103-103H440v-80h287L624-743l56-57 200 200-200 200Z"/></svg>
        Physics
        <svg id="right-chev-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
