--- a/ecology.html
+++ b/ecology.html
@@ -19,18 +19,18 @@
 
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/ecology/ecology-calculators">
+<link rel="canonical" href="https://calclulo.com/ecology">
 
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/ecology/ecology-calculators">
+<meta property="og:url" content="https://calclulo.com/ecology">
 <meta property="og:title" content="Free Ecology Calculators for Sustainability and Environment">
 <meta property="og:description" content="Measure environmental impact with accurate ecology calculators. Built for sustainable living, farming, and research.">
 <meta property="og:image" content="https://calclulo.com/assets/images/ecology calculators-thumbnail.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/ecology/ecology-calculators">
+<meta name="twitter:url" content="https://calclulo.com/ecology">
 <meta name="twitter:title" content="Free Ecology Calculators for Sustainability and Environment">
 <meta name="twitter:description" content="Calculate your carbon footprint, emissions, and more using our free ecology tools. Designed for environmental awareness and sustainable action.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/ecology calculators-thumbnail.png">
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Ecology Calculators",
-    "url": "https://calclulo.com/ecology/ecology-calculators",
+    "url": "https://calclulo.com/ecology",
     "description": "Explore our collection of free ecology calculators for carbon footprint, emissions, water usage, and sustainability metrics.",
     "inLanguage": "en",
     "publisher": {
