--- a/food.html
+++ b/food.html
@@ -19,18 +19,18 @@
 
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/food/food-calculators">
+<link rel="canonical" href="https://calclulo.com/food">
 
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/food/food-calculators">
+<meta property="og:url" content="https://calclulo.com/food">
 <meta property="og:title" content="Free Food Calculators for Nutrition and Cooking">
 <meta property="og:description" content="Track your meals and plan recipes with our accurate food calculators. Built for healthy living and cooking precision.">
 <meta property="og:image" content="https://calclulo.com/assets/images/food calculators-thumbnail.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/food/food-calculators">
+<meta name="twitter:url" content="https://calclulo.com/food">
 <meta name="twitter:title" content="Free Food Calculators for Nutrition and Cooking">
 <meta name="twitter:description" content="From calories to macronutrients, use these calculators to eat smarter and cook better. Great for health, fitness, and meal prep.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/food calculators-thumbnail.png">
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Food Calculators",
-    "url": "https://calclulo.com/food/food-calculators",
+    "url": "https://calclulo.com/food",
     "description": "Explore our collection of free food and nutrition calculators to track calories, plan meals, and cook with confidence.",
     "inLanguage": "en",
     "publisher": {
