--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -422,7 +422,7 @@ Clear all changes
       <div class="similar-calculators">
         <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
         <a href="/health/gfr-calculator">GFR Calculator</a>
-        <a href="/health/fat-Intake-calculator">Fat Intake Calculator</a>
+        <a href="/everyday-life">Fat Intake Calculator</a>
       </div>
     </div>
 <div class="description-txt">
