--- a/agriculture/seed-rate-calculator.html
+++ b/agriculture/seed-rate-calculator.html
@@ -458,7 +458,7 @@ Clear all changes
   <div class="similar-calculators">
     <a href="/agriculture/herbicide-calculator">Herbicide Calculator</a>
     <a href="/health/gfr-calculator">GFR Calculator</a>
-<a href="/health/fat-Intake-calculator">Fat Intake Calculator</a>
+<a href="/everyday-life">Fat Intake Calculator</a>
   </div>
 </div>
 <div class="description-txt">
