--- a/education.html
+++ b/education.html
@@ -19,18 +19,18 @@
 
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/education/education-calculators">
+<link rel="canonical" href="https://calclulo.com/education">
 
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/education/education-calculators">
+<meta property="og:url" content="https://calclulo.com/education">
 <meta property="og:title" content="Free Education Calculators for Students and Teachers">
 <meta property="og:description" content="Enhance your learning with smart education tools. Calculate grades, study time, and academic performance easily.">
 <meta property="og:image" content="https://calclulo.com/assets/images/education calculators-thumbnail.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/education/education-calculators">
+<meta name="twitter:url" content="https://calclulo.com/education">
 <meta name="twitter:title" content="Free Education Calculators for Students and Teachers">
 <meta name="twitter:description" content="Smart academic tools to help you calculate grades, plan study time, and boost performance. Perfect for students and educators.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/education calculators-thumbnail.png">
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Education Calculators",
-    "url": "https://calclulo.com/education/education-calculators",
+    "url": "https://calclulo.com/education",
     "description": "Explore our free calculators for GPA, grade prediction, study planning, and more — ideal for students and teachers.",
     "inLanguage": "en",
     "publisher": {
