--- a/finance/mobile-app-ad-revenue-calculator.html
+++ b/finance/mobile-app-ad-revenue-calculator.html
@@ -496,7 +496,7 @@ Clear all changes
   </p>
   
   <p>
-    Revenue is often measured using <a href="https://en.wikipedia.org/wiki/Revenue_per_mille" target="_blank" rel="noopener noreferrer">Page RPM (Revenue per 1,000 page views)</a>, a common metric for apps online businesses. This calculator simplifies the math, showing how your visits and page views translate into estimated earnings .
+    Revenue is often measured using Page RPM (Revenue per 1,000 page views), a common metric for apps online businesses. This calculator simplifies the math, showing how your visits and page views translate into estimated earnings .
   </p>
   
   <p>
