--- a/finance/website-ad-revenue-calculator.html
+++ b/finance/website-ad-revenue-calculator.html
@@ -460,7 +460,7 @@ Clear all changes
   </p>
   
   <p>
-    Revenue is often measured using <a href="https://en.wikipedia.org/wiki/Revenue_per_mille" target="_blank" rel="noopener noreferrer">Page RPM (Revenue per 1,000 page views)</a>, a common metric for websites, blogs, and online businesses. This calculator simplifies the math, showing how your visits and page views translate into estimated earnings.  whether you're using platforms like <a href="https://support.google.com/adsense/answer/190515?hl=en" target="_blank" rel="noopener noreferrer">Google AdSense</a>, affiliate ads, or other monetization tools.
+    Revenue is often measured using Page RPM (Revenue per 1,000 page views), a common metric for websites, blogs, and online businesses. This calculator simplifies the math, showing how your visits and page views translate into estimated earnings.  whether you're using platforms like <a href="https://support.google.com/adsense/answer/190515?hl=en" target="_blank" rel="noopener noreferrer">Google AdSense</a>, affiliate ads, or other monetization tools.
   </p>
   
   <p>
