--- a/health/fat-Intake-calculator.html
+++ b/health/fat-Intake-calculator.html
@@ -21,18 +21,18 @@
 
 <meta name="calclulo" content="Calclulo - Fat intake calculator ">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/health/fat-intake-calculator">
+<link rel="canonical" href="https://calclulo.com/everyday-life">
 
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/health/fat-intake-calculator">
+<meta property="og:url" content="https://calclulo.com/everyday-life">
 <meta property="og:title" content="Free Fat Intake Calculator | Accurate Daily Nutrition Guide">
 <meta property="og:description" content="Calclulo's free Fat Intake Calculator helps you understand how much fat your body needs per day, based on your activity level, weight, height, and age.">
 <meta property="og:image" content="https://calclulo.com/assets/images/fat-intake-calculator-thumbnail.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/health/fat-intake-calculator">
+<meta name="twitter:url" content="https://calclulo.com/everyday-life">
 <meta name="twitter:title" content="Fat Intake Calculator by Calclulo | Know Your Daily Fat Needs">
 <meta name="twitter:description" content="Figure out your ideal daily fat intake with Calclulo’s free calculator. Designed to support healthy eating and balanced nutrition.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/fat-intake-calculator-thumbnail.png">
@@ -44,7 +44,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Fat Intake Calculator",
-    "url": "https://calclulo.com/health/fat-intake-calculator",
+    "url": "https://calclulo.com/everyday-life",
     "description": "Find out how much fat you should eat each day with Calclulo’s Fat Intake Calculator. Based on your weight, age, height, and activity level.",
     "inLanguage": "en",
     "publisher": {
