--- a/health.html
+++ b/health.html
@@ -207,7 +207,7 @@ Everyday Life
   <h1>Addiction medicine calculators</h1>
 <h1>Dietary calculators</h1>
 
-<a href="/health/fat-Intake-calculator">Fat Intake Calculator</a>
+<a href="/everyday-life">Fat Intake Calculator</a>
 <h1>Urology & nephrology calculators</h1>
 <a href="/health/gfr-calculator">GFR Calculator</a>
 </div>
