--- a/health/conception-calculator.html
+++ b/health/conception-calculator.html
@@ -342,7 +342,7 @@ Clear all changes
       <div class="similar-calculators">
         <a href="/health/gfr-calculator">GFR Calculator</a>
         <a href="/food/coffee-calculator">Coffee Calculator</a>
-        <a href="/health/fat-Intake-calculator">Fat Intake Calculator</a>
+        <a href="/everyday-life">Fat Intake Calculator</a>
       </div>
     </div>
 <div class="description-txt">
