--- a/health/gfr-calculator.html
+++ b/health/gfr-calculator.html
@@ -387,7 +387,7 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
       <div class="similar-calculators">
-        <a href="/health/fat-Intake-calculator">Fat Intake Calculator</a>
+        <a href="/everyday-life">Fat Intake Calculator</a>
         <a href="/biology/ligation-calculator">Ligation Calculator</a>
         <a href="/everyday-life/age-calculator">Age Calculator</a>
       </div>
