--- a/other.html
+++ b/other.html
@@ -19,18 +19,18 @@
 
 <meta name="author" content="Your Name or Brand">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/agriculture-calculators">
+<link rel="canonical" href="https://calclulo.com/agriculture">
 
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/agriculture-calculators">
+<meta property="og:url" content="https://calclulo.com/agriculture">
 <meta property="og:title" content="Free Agriculture Calculators for Farmers, Gardeners & Scientists">
 <meta property="og:description" content="Calculate seed rate, crop yield, fertilizers, pesticides, and more with this free collection of farming calculators. Trusted by agricultural professionals.">
 <meta property="og:image" content="https://calclulo.com/assets/agriculture-thumbnail.jpg">
 
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/agriculture-calculators">
+<meta name="twitter:url" content="https://calclulo.com/agriculture">
 <meta name="twitter:title" content="Free Agriculture Calculators for Farmers, Gardeners & Scientists">
 <meta name="twitter:description" content="Quick, reliable tools for seed rate, pesticide use, crop yield, and more. Empowering farmers and researchers with accurate calculations.">
 <meta name="twitter:image" content="https://calclulo.com/assets/agriculture-thumbnail.jpg">
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Agriculture Calculators",
-    "url": "https://calclulo.com/agriculture-calculators",
+    "url": "https://calclulo.com/agriculture",
     "description": "This page features free agriculture calculators designed for farmers, gardeners, pet owners, and researchers. Calculate seed rate, fertilizer mix, pesticide usage, and more with precision.",
     "inLanguage": "en",
     "publisher": {
