--- a/other/youtube-watch-time-calculator.html
+++ b/other/youtube-watch-time-calculator.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="/assets/css/cookie.css" />
 <link rel="stylesheet" href="/assets/css/share-global.css" />
 
-<link rel="stylesheet" href="/assets/css/save-values.css"/>
+<link rel="stylesheet" href=""/>
 <link rel="stylesheet" href="/assets/css/tooltip-global.css"/>
 
 <meta name="title" content="YouTube Watch Time Calculator | Free Tool for Creators & Marketers">
