--- a/sports.html
+++ b/sports.html
@@ -19,18 +19,18 @@
 
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/sports/sports-calculators">
+<link rel="canonical" href="https://calclulo.com/sports">
 
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/sports/sports-calculators">
+<meta property="og:url" content="https://calclulo.com/sports">
 <meta property="og:title" content="Free Sports Calculators for Athletes and Coaches">
 <meta property="og:description" content="Train smarter with our free sports calculators. From endurance to recovery, these tools help you stay at peak performance.">
 <meta property="og:image" content="https://calclulo.com/assets/images/sports calculators-thumbnail.png">
 
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/sports/sports-calculators">
+<meta name="twitter:url" content="https://calclulo.com/sports">
 <meta name="twitter:title" content="Free Sports Calculators for Athletes and Coaches">
 <meta name="twitter:description" content="Calculate pace, heart rate, calories, and more with these accurate fitness tools. Built for training, performance, and recovery.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/sports calculators-thumbnail.png">
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Sports Calculators",
-    "url": "https://calclulo.com/sports/sports-calculators",
+    "url": "https://calclulo.com/sports",
     "description": "Explore free tools to improve athletic performance — from pace and heart rate to calorie burn and BMI.",
     "inLanguage": "en",
     "publisher": {
