--- a/education.html
+++ b/education.html
@@ -201,7 +201,7 @@ Everyday Life
 
 <div class="calculators-lists">
   <h1>Attendance Calculators</h1>
-  <a href="/education/75-attendance-calculator.html">75 Attendance Calculator</a>
+  <a href="/education/75-attendance-calculator">75 Attendance Calculator</a>
  <h1>Nigeria </h1>
  <a href="/education/cgpa-calculator-nigeria">CGPA Calculator</a>
 </div>
