--- a/other.html
+++ b/other.html
@@ -227,7 +227,7 @@ Everyday Life
 <h1>Whop</h1>
 <a href="/other/whop-revenue-calculator">Whop Revenue Calculator</a>
 <h1>Other</h1>
-<a href="/other/tip-calculator.html">Tip Calculator</a>
+<a href="/other/tip-calculator">Tip Calculator</a>
 </div>
   </section>
 
