--- a/agriculture.html
+++ b/agriculture.html
@@ -202,7 +202,7 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Crop Calculators</h1>
+  <h1>Crop Calculators 🌾</h1>
  
     <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
     <a href="/agriculture/herbicide-calculator">Herbicide Calculator</a>
