--- a/conversion.html
+++ b/conversion.html
@@ -200,7 +200,7 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Numeral systems converters </h1>
+  <h1>Numeral systems converters  🔢</h1>
   <a href="/conversion/roman-numeral-converter">Roman Numeral Converter</a>
   <a href="/conversion/roman-numeral-date-converter">Roman Numeral Date Converter</a>
 </div>
