--- a/education.html
+++ b/education.html
@@ -200,9 +200,9 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Attendance Calculators</h1>
+  <h1>Attendance Calculators 👨‍🏫</h1>
   <a href="/education/75-attendance-calculator">75 Attendance Calculator</a>
- <h1>Nigeria </h1>
+ <h1>Nigerian Schools 🇳🇬</h1>
  <a href="/education/cgpa-calculator-nigeria">CGPA Calculator</a>
 </div>
   </section>
