--- a/everyday-life.html
+++ b/everyday-life.html
@@ -200,9 +200,8 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-<h1>Transportation Calculator</h1>
 
-<h1>Time and Date</h1>
+<h1>Time and Date 📆</h1>
 
 <a href="/everyday-life/age-calculator">Age Calculator</a>
 <a href="/everyday-life/age-difference-calculator">Age Difference Calculator</a>
