--- a/finance.html
+++ b/finance.html
@@ -200,27 +200,26 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Mortgage and real estate calculators</h1>
+  <h1>Mortgage and real estate calculators 💰</h1>
   <a href="/finance/rent-calculator">Rent Calculator</a>
-<h1>Tax and salary calculators </h1>
+<h1>Tax and salary calculators  💸</h1>
 <a href="/finance/vat-calculator">VAT Calculator</a>
 <a href="/finance/sales-tax-calculator">Sales Tax Calculator</a>
 <a href="/finance/custom-duty-calculator-for-vehicles-nigeria">Custom Duty Calculator for vehicles Nigeria</a>
 <a href="/finance/nigeria-personal-income-tax-calculator">Nigeria Personal Income Tax Calculator</a>
-<h1>Online Business</h1>
 
-<a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
-<a href="/finance/mobile-app-ad-revenue-calculator">Mobile App Ad Revenue Calculator</a>
-<h1>Retirement Calculators</h1>
-
-<h1>General investment calculators</h1>
+<h1>General investment calculators 📈</h1>
 <a href="/finance/cd-calculator">CD Calculator</a>
 <a href="/finance/apy-calculator">APY Calculator</a>
 <a href="/finance/roi-calculator">ROI Calculator</a>
 <a href="/finance/Interest-rate-calculator">Interest Rate Calculator</a>
-<h1>Debt investment calculators</h1>
+<h1>Debt investment calculators 💳</h1>
 <a href="/finance/bond-calculator">Bond Calculator</a>
 <a href="/finance/bond-price-calculator">Bond Price Calculator</a>
+<h1>Other 🤷</h1>
+
+<a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
+<a href="/finance/mobile-app-ad-revenue-calculator">Mobile App Ad Revenue Calculator</a>
 </div>
   </section>
 
