--- a/finance/bond-calculator.html
+++ b/finance/bond-calculator.html
@@ -534,7 +534,7 @@ Clear all changes
       <div class="similar-calculators">
         <a href="/finance/Interest-rate-calculator">Interest Rate Calculator</a>
         <a href="/finance/bond-price-calculator">Bond Price Calculator</a>
-        <a href="/other/risk-calculator">Risk Calculator</a>
+        <a href="/statistics/risk-calculator">Risk Calculator</a>
       </div>
     </div>
 <div class="description-txt">
