--- a/food.html
+++ b/food.html
@@ -199,9 +199,9 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Cooking converters</h1>
+  <h1>Cooking converters 🥧</h1>
   <a href="/food/grams-to-cups-converter">Grams to Cups Converter</a>
-  <h1>Tea and Coffee Calculators</h1>
+  <h1>Tea and Coffee Calculators ☕</h1>
   <a href="/food/coffee-calculator">Coffee Calculator</a>
 </div>
   </section>
