--- a/health.html
+++ b/health.html
@@ -200,15 +200,14 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Gynecology & pregnancy calculators</h1>
+  <h1>Gynecology & pregnancy calculators 🤰</h1>
   <a href="/health/conception-calculator">Conception Calculator</a>
   <a href="/health/ovulation-calculator">Ovulation Calculator</a>
  
-  <h1>Addiction medicine calculators</h1>
-<h1>Dietary calculators</h1>
+<h1>Dietary calculators 🍔</h1>
 
 <a href="/everyday-life">Fat Intake Calculator</a>
-<h1>Urology & nephrology calculators</h1>
+<h1>Urology & nephrology calculators 👨‍⚕️</h1>
 <a href="/health/gfr-calculator">GFR Calculator</a>
 </div>
   </section>
