--- a/math.html
+++ b/math.html
@@ -200,14 +200,13 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Common Calculators</h1>
 
-  <h1>Arithmetic calculators</h1>
+  <h1>Arithmetic calculators 🧮</h1>
   <a href="/math/mean-calculator">Mean Calculator</a>
-  <h1>Algebra calculators</h1>
+  <h1>Algebra calculators 🔡</h1>
   <a href="/math/foil-calculator">Foil Calculator</a>
-  <h1>Percentage Calculators</h1>
-  <a href="/math/percentage-calculator">Percentage Calculator</a>
+  <h1>Percentage Calculators 💯</h1>
+  <a href="/math/percentage-calculator">Percentage Calculator </a>
 </div>
   </section>
 
