--- a/statistics.html
+++ b/statistics.html
@@ -200,8 +200,9 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  <h1>Probability theory and odds calculators </h1>
+  <h1>Probability theory and randomizer calculators 🫡</h1>
   <a href="/statistics/coin-flipper">Coin Flipper</a>
+<a href="/statistics/risk-calculator">Risk Calculator</a>
 </div>
   </section>
 
