--- a/other.html
+++ b/other.html
@@ -200,33 +200,32 @@ Everyday Life
 
 <div class="calculators-lists">
  
-<h1>YouTube Calculators</h1>
+<h1>YouTube Calculators ▶️</h1>
 <a href="/other/youtube-watch-time-calculator">YouTube Watch Time Calculator</a>
 <a href="/other/youtube-ad-revenue-calculator">Youtube Ad Revenue Calculator</a>
 <a href="/other/youtube-cpm-calculator">YouTube CPM Calculator</a>
 
-<h1>Internet and network calculators </h1>
+<h1>Internet and network calculators 🛜</h1>
 
 <a href="/other/upload-time-calculator">Upload Time Calculator</a>
 <a href="/other/download-time-calculator">Download Time Calculator calculator</a>
 <a href="/other/website-bandwidth-calculator">Website Bandwidth Calculator</a>
-<h1>Gaming</h1>
+<h1>Gaming 🎮</h1>
 
 <a href="/other/edpi-calculator">eDPI Calculator</a>
-<h1>Probability theory and randomizer calculators</h1>
-<a href="/other/risk-calculator">Risk Calculator</a>
-<h1>Marketing </h1>
+
+<h1>Marketing 🔖</h1>
 <a href="/other/ctr-calculator">CTR Calculator</a>
-<h1>Facebook </h1>
+<h1>Facebook 🪧</h1>
 <a href="/other/facebook-ads-cost-calculator">Facebook Ads Cost Calculator</a>
 <a href="/other/facebook-money-calculator">Facebook Money Calculator</a>
-<h1>TikTok</h1>
-<a href="/other/tiktok-coin-calculator">TikTok Coin Calculator</a>
+<h1>TikTok 🎦</h1>
+<a href="/other/tiktok-coin-calculator">TikTok Coin Calculator </a>
 <a href="/other/tiktok-diamonds-calculator">TikTok Diamonds Calculator</a>
 <a href="/other/tiktok-money-calculator">TikTok Money Calculator</a>
-<h1>Whop</h1>
-<a href="/other/whop-revenue-calculator">Whop Revenue Calculator</a>
-<h1>Other</h1>
+<h1>Whop 🎥</h1>
+<a href="/other/whop-revenue-calculator">Whop Revenue Calculator </a>
+<h1>Other 🤔</h1>
 <a href="/other/tip-calculator">Tip Calculator</a>
 </div>
   </section>
