--- a/agriculture.html
+++ b/agriculture.html
@@ -195,7 +195,7 @@ Everyday Life
   
 </button>
 </h1>
-
+<p data-name-category="agriculture" class="description-header-info-calculator-numb"></p>
   <p class="category-info-p">
     Streamline your farming calculations and make smarter, more efficient choices. This is ideal for farmers and students.
   </p>
