--- a/ecology.html
+++ b/ecology.html
@@ -193,7 +193,7 @@ Everyday Life
   
 </button>
 </h1>
-
+<p data-name-category="ecology" class="description-header-info-calculator-numb"></p>
   <p class="category-info-p">
     Eco calculators to easily track, understand, and reduce your carbon footprint, water use, and energy consumption.
   </p>
