--- a/education.html
+++ b/education.html
@@ -194,6 +194,7 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="education" class="description-header-info-calculator-numb"></p>
   <p class="category-info-p">
     Easy to use calculators for students to solve grades, homework, and other school tasks quickly and accurately.
   </p>
