--- a/everyday-life.html
+++ b/everyday-life.html
@@ -194,6 +194,8 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="everyday life" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
    Take the hassle out of everyday calculations. Simple, quick, and made to help with the little decisions life throws your way.
   </p>
