--- a/food.html
+++ b/food.html
@@ -193,6 +193,9 @@ Everyday Life
   
 </button>
 </h1>
+
+<p data-name-category="food" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
     Simple food calculators to help you measure ingredients, plan meals, and track nutrition with ease.
   </p>
