--- a/health.html
+++ b/health.html
@@ -194,6 +194,8 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="health" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
     Use simple health calculators to track your wellness, eat better, and feel your best. Perfect for anyone on a health journey
   </p>
