--- a/math.html
+++ b/math.html
@@ -194,6 +194,8 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="math" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
     From basic to advanced, these math calculators help you solve equations, percentages, fractions, and more. Great for students, teachers, professionals, and anyone tackling everyday or complex math problems.
   </p>
