--- a/other.html
+++ b/other.html
@@ -193,6 +193,8 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="other" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
     Easily tackle a wide range of calculations in various fields with precision and simplicity. This handy tool is perfect for both everyday tasks and specialized requirements.
   </p>
