--- a/physics.html
+++ b/physics.html
@@ -194,6 +194,8 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="physics" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
     Powerful physics calculators to solve motion, force, energy, and other key concepts. Whether you're a student, teacher, or enthusiast, these tools make tackling physics problems faster and easier.
   </p>
