--- a/sports.html
+++ b/sports.html
@@ -194,6 +194,8 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="sports" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
     Handy sports calculators to track performance, measure progress, and improve training. Whether you're an athlete, coach, or fan, these tools help you stay on top of your game.
   </p>
