--- a/statistics.html
+++ b/statistics.html
@@ -194,6 +194,8 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="statistics" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
     Smart statistics calculators for analyzing data, finding averages, probabilities, and more. Ideal for students, researchers, and anyone working with numbers.
   </p>
