--- a/finance.html
+++ b/finance.html
@@ -194,6 +194,8 @@ Everyday Life
 </button>
 </h1>
 
+<p data-name-category="finance" class="description-header-info-calculator-numb"></p>
+
   <p class="category-info-p">
     Streamline your farming calculations and make smarter, more efficient choices. This is ideal for farmers and students.
   </p>
