--- a/finance.html
+++ b/finance.html
@@ -197,7 +197,7 @@ Everyday Life
 <p data-name-category="finance" class="description-header-info-calculator-numb"></p>
 
   <p class="category-info-p">
-    Streamline your farming calculations and make smarter, more efficient choices. This is ideal for farmers and students.
+  Finance calculators help you manage money better by quickly calculating loans, investments, savings, and budgets with accurate results.
   </p>
 </div>
 
