--- a/physics.html
+++ b/physics.html
@@ -202,7 +202,8 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  
+  <h1>Energy, work, and power calculators ⚡</h1>
+  <a href="/physics/bullet-energy-calculator">Bullet Energy Calculator</a>
 </div>
   </section>
 
