--- a/education/75-attendance-calculator.html
+++ b/education/75-attendance-calculator.html
@@ -446,9 +446,9 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
       <div class="similar-calculators">
-        <a href="/other/facebook-ads-cost-calculator">Facebook Ad Cost Calculator</a>
-        <a href="/other/youtube-cpm-calculator">YouTube CPM Calculator</a>
-        <a href="/finance/website-ad-revenue-calculator">Website Ad Revenue Calculator</a>
+        <a href="/everyday-life/age-calculator">Age Calculator</a>
+        <a href="/everyday-life/time-calculator">Time Calculator</a>
+        <a href="/math/mean-calculator">Mean Calculator</a>
       </div>
     </div>
 <div class="description-txt">
