--- a/math.html
+++ b/math.html
@@ -209,6 +209,7 @@ Everyday Life
   <a href="/math/foil-calculator">Foil Calculator</a>
   <h1>Percentage Calculators 💯</h1>
   <a href="/math/percentage-calculator">Percentage Calculator </a>
+  <a href="/math/percent-off-calculator">Percent Off Calculator</a>
 </div>
   </section>
 
