--- a/math/percentage-calculator.html
+++ b/math/percentage-calculator.html
@@ -366,6 +366,7 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
       <div class="similar-calculators">
+        <a href="/math/percent-off-calculator">Percent Off Calculator</a>
         <a href="/math/foil-calculator">Foil Calculator</a>
        <a href="/math/mean-calculator">Mean Calculator</a>
       </div>
