--- a/other/tip-calculator.html
+++ b/other/tip-calculator.html
@@ -567,7 +567,7 @@ Clear all changes
         <a href="/finance/roi-calculator">ROI Calculator</a>
       
         <a href="/finance/cd-calculator">CD Calculator</a>
-        <a href="/finance/custom-duty-calculator-for-vehicles-nigeria">Car Custom Duty Calculator NG</a>
+        <a href="/finance/rent-calculator">Rent Calculator</a>
       </div>
     </div>
 <div class="description-txt">
