--- a/physics/bullet-energy-calculator.html
+++ b/physics/bullet-energy-calculator.html
@@ -384,7 +384,7 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
       <div class="similar-calculators">
-        <a href="/chemistry/atom-calculator.html">Atom Calculator</a>
+        <a href="/chemistry/atom-calculator">Atom Calculator</a>
         <a href="/health/gfr-calculator">GFR Calculator</a>
 <a href="/biology/ligation-calculator">Ligation Calculator</a>
       </div>
@@ -392,7 +392,7 @@ Clear all changes
 <div class="description-txt">
   <h2>What is bullet energy</h2>
   <p>
-    In ballistics and applied physics the phrase “bullet energy” most commonly refers to the kinetic energy a projectile carries at the moment it leaves the barrel — the muzzle energy — or sometimes the energy it still carries at the moment of impact. Kinetic energy is a very simple physical quantity in formula form: <em>E = ½ m v²</em>, where <em>m</em> is the bullet’s mass and <em>v</em> its velocity. That compact equation captures an important idea: energy grows linearly with mass but with the square of velocity, so a small increase in speed produces a much larger increase in kinetic energy than the same relative increase in mass. This is why velocity is often emphasized when people compare cartridge power. 0
+    In ballistics and applied physics the phrase “bullet energy” most commonly refers to the kinetic energy a projectile carries at the moment it leaves the barrel — the muzzle energy — or sometimes the energy it still carries at the moment of impact. Kinetic energy is a very simple physical quantity in formula form: <em>E = ½ m v²</em>, where <em>m</em> is the bullet’s mass and <em>v</em> its velocity. That compact equation captures an important idea: energy grows linearly with mass but with the square of velocity, so a small increase in speed produces a much larger increase in kinetic energy than the same relative increase in mass. This is why velocity is often emphasized when people compare cartridge power. 
   </p>  <p>
     Units matter. In the SI system energy is measured in joules (J). In hunting and small-arms ballistics the same physical energy is frequently expressed in foot-pounds (ft-lb). To compare or compute energy you must convert mass and velocity into compatible units (for the formula you need mass in kilograms and velocity in meters per second). Bullets are commonly specified by mass in grains (gr) or grams (g) and velocity in feet per second (ft/s) or meters per second (m/s). For example, one grain equals about 6.47989×10⁻⁵ kilograms, and one foot-pound of energy equals about 1.35581795 joules — those conversion constants let you move cleanly between the systems before applying the kinetic energy formula. 1
   </p>  <p>
