--- a/sports/on-base-percentage-calculator.html
+++ b/sports/on-base-percentage-calculator.html
@@ -490,7 +490,7 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar Calculators</h2>
       <div class="similar-calculators">
-        <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
+        <a href="/other/edpi-calculator">EDPI Calculator</a>
         <a href="/health/gfr-calculator">GFR Calculator</a>
         <a href="/everyday-life">Fat Intake Calculator</a>
       </div>
