--- a/math/percent-off-calculator.html
+++ b/math/percent-off-calculator.html
@@ -192,7 +192,7 @@ Everyday Life
 </h1>
 
   <p class="calculator-info-p">
-    Quickly estimate how much rent you can afford using your income, debts, and utility costs. Get both a maximum and recommended rent for smarter budgeting.
+    Calculate savings and final price after a percent off. Optionally include sales tax for accurate results.
     </p>
 </div>
 
@@ -326,8 +326,8 @@ Everyday Life
 
  </div>
   </div>
-  
-  <div style="display: none;" data-input-id="sales-tax-percent-off-calculator" class="input-group">
+
+  <div  data-input-id="sales-tax-percent-off-calculator" class="input-group">
     <label>Sales tax
     
 
