--- a/conversion.html
+++ b/conversion.html
@@ -203,6 +203,8 @@ Everyday Life
   <h1>Numeral systems converters  🔢</h1>
   <a href="/conversion/roman-numeral-converter">Roman Numeral Converter</a>
   <a href="/conversion/roman-numeral-date-converter">Roman Numeral Date Converter</a>
+  <h1>Time converters 🕰️</h1>
+<a href="/conversion/minutes-to-hours-converter">Minutes to Hours Converter</a>
 </div>
   </section>
 
