--- a/finance/nigeria-personal-income-tax-calculator.html
+++ b/finance/nigeria-personal-income-tax-calculator.html
@@ -723,7 +723,7 @@ Everyday Life
   color: #222;
   font-family: young;
   width: 100%;
-max-width: 600px;
+max-width: 420px;
 display: flex;
 flex-direction: column;
 }
@@ -812,6 +812,12 @@ padding: 15px;
 #resultdiv .table-summary td:last-child {
   font-weight: bold;
   color: #464BFF;
+}
+@media (min-width: 900px) {
+  #resultdiv{
+    margin-left: 6em;
+padding: 15px;
+  }
 }
   </style>
   <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
